[package]
name = "recibosagua_rs"
version = "0.1.0"
edition = "2021"
author = "Tony <tonymj@pm.me>"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"]}
lazy_static = "1.4.0"
dialoguer = "0.10.3"
rusqlite = "0.29.0"
calamine = "0.19.1"
tabled = "0.10.0"
tera = "1.18.1"
serde = { version = "1.0.159", features = ["derive"] }
simple_excel_writer = "0.2.0"
postgres = "0.19.5"
configparser = "3.0.2"
